# gems

./: AUTHORS.txt  LICENSE  Makefile.am  README.md  configure.ac  gems-new.xcf  gems.xcf
src/: Makefile.am  game.c  game.h  main.c  menu.c  menu.h  session.c  session.h  splash.c  splash.h
tests/: Makefile.am  add-gem.c  arrow-keys-move-board-cursor.c  checkerboard-corners.c  escape-quits-from-menu.c  five-in-row-or-col-makes-special3.c  four-in-column-makes-special1.c  four-in-row-makes-special1.c  frame-starts-at-zero.c  key-pressed.c  key-released.c  key-states-exist.c  l-shape-makes-special2.c  legal-move.c  loop-exists.c  loop-increments-frame.c  matches-only-happen-when-settled.c  menu-after-splash.c  menu-enter-triggers.c  menu-selection.c  move-gem.c  move-locked-cursor.c  prev-key-states-exist.c  prev-key-states.c  remove-gem.c  replace-gems.c  screen-exists.c  session-starts-with-no-matches.c  space-locks-board-cursor.c  special1-match.c  special2-match.c  splash-is-short.c  state-exists.c  swap-gems.c  t-shape-makes-special2.c  test.c  test.h  three-in-column-drops-new-ones.c  three-in-row-drops-new-ones.c
